# fastapi-template

./: .env  .gitignore  Makefile  api.dockerfile  backend.dockerfile  docker-compose.yml  pdf_generator.dockerfile  pyproject.toml  python.dockerfile
.circleci/: config.yml
app/: mypy.ini
app/adapter/into/fastapi/: dependencies.py  main.py
app/adapter/into/fastapi/routes/: pdf.py
app/domain/: pdf.py  task.py
app/infrastructure/db/: __init__.py
app/infrastructure/sqs/: __init__.py
app/infrastructure/storage/: __init__.py
app/pdf/adapter/into/fastapi/routes/: pdf.py
app/pdf/domain/: pdf.py
app/pdf/ports/: pdf.py
app/pdf/use_case/: create_pdf.py  get_pdf.py
app/ports/: db.py  storage.py  task.py
app/use_case/: create_pdf.py  create_pdf_task.py  get_pdf_task.py
infra/: Makefile
infra/docker/: api.dockerfile  lambda-api.dockerfile
infra/tf/: main.tf  output.tf  template.tfvars  variables.tf
infra/tf/.terraform/modules/: modules.json
infra/tf/modules/api/aws/: main.tf  output.tf
infra/tf/modules/images/aws/: main.tf  output.tf
infra/tf/modules/vpc/: main.tf  output.tf
infra/tf_pipeline/: main.tf
scripts/: deploy.sh  lint.sh
