[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
